[vscode] Update extensions, change default theme, optimise deep-start

--- a/vscode/code-server/User/settings.json
+++ b/vscode/code-server/User/settings.json
@@ -1,4 +1,5 @@
 {
     "autoDocstring.docstringFormat": "sphinx",
-    "workbench.colorTheme": "Default High Contrast"
+    "workbench.colorTheme": "Visual Studio Dark",
+    "notebook.lineNumbers": "on"
 }
