[env] add idePASSWORD, in future to replace jupyterPASSWORD

--- a/vscode/code-server/User/settings.json
+++ b/vscode/code-server/User/settings.json
@@ -1,5 +1,6 @@
 {
     "autoDocstring.docstringFormat": "sphinx",
     "workbench.colorTheme": "Visual Studio Dark",
-    "notebook.lineNumbers": "on"
+    "notebook.lineNumbers": "on",
+    "terminal.integrated.gpuAcceleration": "off"
 }
